// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playthroughs List Container Renders with playthroughs in the state 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "#592a29",
      "height": "100%",
    }
  }
>
  <View>
    <View
      accessible={true}
      clickable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#e84641",
          "borderRadius": 10,
          "margin": 15,
          "marginBottom": 0,
          "opacity": 1,
          "padding": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View>
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 22,
              }
            }
          >
            Playthrough 0
          </Text>
          <Text
            style={
              Object {
                "color": "#592a29",
                "fontSize": 18,
              }
            }
          >
            1
             Deaths  •  
            Game 0
          </Text>
        </View>
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                Object {
                  "color": undefined,
                },
                Object {
                  "color": "#ffffff",
                  "fontSize": 30,
                  "paddingRight": 5,
                },
                Object {
                  "fontFamily": "FontAwesome5FreeSolid",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
    <View
      accessible={true}
      clickable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#e84641",
          "borderRadius": 10,
          "margin": 15,
          "marginBottom": 0,
          "opacity": 1,
          "padding": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View>
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 22,
              }
            }
          >
            Playthrough 1
          </Text>
          <Text
            style={
              Object {
                "color": "#592a29",
                "fontSize": 18,
              }
            }
          >
            1
             Deaths  •  
            Game 0
          </Text>
        </View>
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                Object {
                  "color": undefined,
                },
                Object {
                  "color": "#ffffff",
                  "fontSize": 30,
                  "paddingRight": 5,
                },
                Object {
                  "fontFamily": "FontAwesome5FreeSolid",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignContent": "center",
          "borderRadius": 5,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 15,
          "width": "100%",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        placeholder="Add a new playthrough"
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderBottomLeftRadius": 10,
            "borderTopLeftRadius": 10,
            "flexGrow": 100,
            "fontSize": 22,
            "height": 50,
            "paddingLeft": 10,
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <View
        accessible={true}
        clickable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "color": undefined,
              },
              Object {
                "backgroundColor": "#e84641",
                "borderBottomRightRadius": 10,
                "borderTopRightRadius": 10,
                "color": "#ffffff",
                "fontSize": 25,
                "height": 50,
                "textAlign": "center",
                "textAlignVertical": "center",
                "width": 50,
              },
              Object {
                "fontFamily": "FontAwesome5FreeSolid",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Playthroughs List Container Renders with the empty initial state 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "#592a29",
      "height": "100%",
    }
  }
>
  <View>
    <View
      style={
        Object {
          "alignContent": "center",
          "borderRadius": 5,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 15,
          "width": "100%",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        placeholder="Add a new playthrough"
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderBottomLeftRadius": 10,
            "borderTopLeftRadius": 10,
            "flexGrow": 100,
            "fontSize": 22,
            "height": 50,
            "paddingLeft": 10,
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <View
        accessible={true}
        clickable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "color": undefined,
              },
              Object {
                "backgroundColor": "#e84641",
                "borderBottomRightRadius": 10,
                "borderTopRightRadius": 10,
                "color": "#ffffff",
                "fontSize": 25,
                "height": 50,
                "textAlign": "center",
                "textAlignVertical": "center",
                "width": 50,
              },
              Object {
                "fontFamily": "FontAwesome5FreeSolid",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
